<resources>
    <string name="tab_caption_home">江湖</string>
    <string name="tab_caption_learn">学艺</string>
    <string name="tab_caption_messenge">消息</string>
    <string name="tab_caption_mine">我的</string>
    <string name="login_slogon">登录爱武艺，结交天下英豪</string>
    <string name="login_account_input_hint">手机号/昵称/邮箱</string>
    <string name="login_mobile_input_hint">手机号</string>
    <string name="login_vcode_button_caption">获取验证码</string>
    <string name="login_pwd_input_hint">请输入密码</string>
    <string name="login_vcode_input_hint">请输入验证码</string>
    <string name="login_login_button_caption">马上登录</string>
    <string name="login_tip_normal">忘记密码,请先用免密码登录, 然后到  我的  中重新设置密码</string>
    <string name="login_tip_no_pwd">未注册手机验证登陆后自动注册</string>
    <string name="login_switch_no_pwd">免密码登录</string>
    <string name="login_switch_with_pwd">账号密码登录</string>
    <string name="login_mobile_num_error">手机号错误</string>
    <string name="login_has_sent_auth_code">验证码已发送</string>
    <string name="login_invalid_mobile_vcode">手机号或者验证码有错</string>
    <string name="login_loading_msg">正在处理中...</string>
    <string name="fragmentme_click_login">点击登录</string>
    <string name="fragmentme_member_level">会员级别</string>
    <string name="fragmentme_score_mefrag">积分</string>
    <string name="fragmentme_note_number">笔记数量</string>
    <string name="fragmentme_login_check">登录后查看您的消息</string>
    <string name="fragmentme_log_on">马上登录</string>
    <string name="fragmentme_myfriend">我的好友</string>
    <string name="fragmentme_mycollection">我的收藏</string>
    <string name="fragmentme_myissue">我的发布</string>
    <string name="fragmentme_myinfomation">个人信息</string>
    <string name="account_security">账号与安全</string>
    <string name="clear_cache">清除缓存</string>
    <string name="clear_offlinedown">清除离线下载</string>
    <string name="videowatching_pession">允许使用2G/3G/4G网络观看视频</string>
    <string name="videodownload_perssion">允许使用2G/3G/4G网络下载视频</string>
    <string name="feedback">意见反馈</string>
    <string name="about_us">关于我们</string>
    <string name="app_score">去App Store评分</string>
    <string name="current_versionn">当前版本</string>
    <string name="exit_login">退出登录</string>
    <string name="setting_account">设置</string>
    <string name="id_account">id号</string>
    <string name="resetpassword_account">修改密码</string>
    <string name="qq_account">QQ号</string>
    <string name="wechat_account">微信</string>
    <string name="weibo_account">微博</string>
    <string name="phonenuber_account">手机号</string>
    <string name="email_account">邮箱</string>
    <string name="unbound_account">未绑定</string>
    <string name="tip_account">绑定后可以用多种方式登录同一个账号, 让登录更方便!</string>
    <string name="tip_resetpassword">密码需要六位以上,避免设置纯数字密码</string>
    <string name="new_password">新密码</string>
    <string name="confirm_password">确认新密码</string>
    <string name="save_password">保存修改</string>
    <string name="phone_bind">绑定手机</string>
    <string name="tip_bind">绑定手机,需要对其进行验证</string>
    <string name="newphone_bind">新手机</string>
    <string name="vcode_bind">验证码</string>
    <string name="getverify_bind">获取验证码</string>
    <string name="newphonehint_bind">请输入手机号</string>
    <string name="vcodehint_bind">请输入验证码</string>
    <string name="modify_bind">修改</string>
    <string name="attention">关注</string>
    <string name="add_friend">添加好友</string>
    <string name="wechat_invite">微信邀请</string>
    <string name="qq_invite">QQ邀请</string>
    <string name="sms_invite">短信邀请</string>
    <string name="recommend">为您推荐</string>
    <string name="user_name">aiwue9955454545</string>
    <string name="mood">他今天很懒,什么都没有写</string>
    <string name="collection_article">文章</string>
    <string name="collection_video">视频</string>
    <string name="collection_album">图集</string>
    <string name="collection__track">动态</string>
    <string name="collection__course">课程</string>
    <string name="personal_data">个人资料</string>
    <string name="save_info">保存</string>
    <string name="nickname_info">昵称:</string>
    <string name="sex_info">性别:</string>
    <string name="mood_info">签名:</string>
    <string name="city_info">城市:</string>
    <string name="submit_feedback">提交</string>
    <string name="aboutus_aboutus">提交</string>
    <string name="version_number_aboutus">版本号： 1.0.0</string>
    <string name="tipnet_aboutus">©2016-2017 AIWUE.COM. All rights reserved.</string>
    <string name="service_privacy_aboutus">服务条款与隐私政策</string>
    <string name="article_share_title">安装爱武艺APP，查看更多高手的练功体会</string>
    <string name="status_share_title">安装爱武艺APP，查看更多高手的练功体会</string>
    <string name="info_confirm_to_exit">确定要退出爱武艺?</string>
    <string name="umeng_common_action_cancel">Cancel</string>
    <string name="umeng_common_action_continue">Continue</string>
    <string name="umeng_common_action_info_exist">The app is already in downloading list.</string>
    <string name="umeng_common_action_pause">Pause</string>
    <string name="umeng_common_download_failed">Download Failed!</string>
    <string name="umeng_common_download_notification_prefix">Downloading:</string>
    <string name="umeng_common_info_interrupt">dowload interrupted.</string>
    <string name="umeng_common_network_break_alert">Please make sure you are connected to internet, download failed</string>
    <string name="REQUEST_PERMISSION_DENIED">没有获得权限，部分功能将无法开启</string>
    <string name="REQUEST_PERMISSION_DENIED_DESCRIPTION">该功能需要：【%1$s】权限，请点击【确定】在【应用信息】>【权限】标签里开启</string>
    <string name="REQUEST_PERMISSION_DENIED_TITLE">权限授予</string>
    <string name="REQUEST_PERMISSION_DESCRIPT_CAMERA">相机</string>
    <string name="REQUEST_PERMISSION_DESCRIPT_CONTACT">通讯录</string>
    <string name="REQUEST_PERMISSION_DESCRIPT_EXTERNAL_STORAGE">存储</string>
    <string name="REQUEST_PERMISSION_DESCRIPT_LOCATION">位置信息</string>
    <string name="REQUEST_PERMISSION_DESCRIPT_READ_PHONE_STATE">拨打电话</string>
    <string name="REQUEST_PERMISSION_DESCRIPT_RECORD_AUDIO">麦克风</string>
    <string name="REQUEST_PERMISSION_DESCRIPT_SMS">短信</string>
    <string name="REQUEST_PERMISSION_GRANTED">已经获得权限，请重新点击</string>
    <string name="REQUEST_PERMISSION_REMINDER">未授予该权限</string>
    <string name="REQUEST_PERMISSION_UPDATE_RESTART">权限变更，请长按菜单键，关闭应用后，重新进入</string>
    <string name="account_account_bind">账号绑定</string>
    <string name="account_account_cancel_bind">取消绑定</string>
    <string name="account_account_click_bind">点击绑定</string>
    <string name="account_account_logout">退出登录</string>
    <string name="account_agree_user_agreement">同意爱武艺用户协议</string>
    <string name="account_auth_and_login">验证登录</string>
    <string name="account_auth_code_error">验证码错误</string>
    <string name="account_auto_register_hint">未注册的用户会自动注册</string>
    <string name="account_auto_register_tips">未注册手机验证后自动注册</string>
    <string name="account_avatar_upload_fail">头像上传失败</string>
    <string name="account_btn_cancel">取消</string>
    <string name="account_btn_ok">确定</string>
    <string name="account_change_password_hint">修改密码：&lt;我>-&lt;设置>-&lt;帐号管理></string>
    <string name="account_commit">提交</string>
    <string name="account_complete_with_space">完 成</string>
    <string name="account_confirm_and_logout">确定并退出</string>
    <string name="account_confirm_btn_txt">进入头条</string>
    <string name="account_confirm_give_up_register">确认放弃登录？</string>
    <string name="account_confirm_to_use_default_name">确认使用头条默认用户名“%s”？</string>
    <string name="account_continue_register">继续登录</string>
    <string name="account_desc_dialog_title">修改签名</string>
    <string name="account_desc_of_pgc_bottom_tips">10&#8211;30个汉字</string>
    <string name="account_desc_same_as_last">与原来介绍相同</string>
    <string name="account_dialog_title_default">"登录你的头条精彩永不丢失"</string>
    <string name="account_dialog_title_favor">"登录并同步收藏云端永久保存！"</string>
    <string name="account_dialog_title_pgc_like">"登录并同步关注云端永久保存！"</string>
    <string name="account_dialog_title_register">"登录后保存阅读习惯打造你的专属头条"</string>
    <string name="account_free_password_login">验证码登录</string>
    <string name="account_give_up">放弃</string>
    <string name="account_give_up_original_account">放弃原账号</string>
    <string name="account_go_to_modify">去修改</string>
    <string name="account_has_account">已有账号？</string>
    <string name="account_input_auth_code">输入验证码</string>
    <string name="account_item_desc">介绍</string>
    <string name="account_item_female">女</string>
    <string name="account_item_gender">性别</string>
    <string name="account_item_head">头像</string>
    <string name="account_item_male">男</string>
    <string name="account_item_name">姓名</string>
    <string name="account_left_number">剩余%1$d字</string>
    <string name="account_login_success">登录成功</string>
    <string name="account_manager_bind_third_tips">社交平台账号绑定</string>
    <string name="account_manager_bind_title">账号和绑定设置</string>
    <string name="account_manager_change_profile_back_img">更换个人主页背景</string>
    <string name="account_manager_edit_profile">编辑资料</string>
    <string name="account_manager_profile_verify_tips">个人资料每月只能修改一次，且需要经过审核</string>
    <string name="account_manager_save_profile">保存</string>
    <string name="account_manager_save_profile_tips">每个月只能修改一次，确认保存修改后的资料吗?</string>
    <string name="account_manager_verify_status">审核中</string>
    <string name="account_mobile_login">手机登录</string>
    <string name="account_modify_left_number">-%1$d</string>
    <string name="account_more_login_ways">更多登录方式</string>
    <string name="account_need_password_tips">尚未设置密码，为保证安全，将验证手机号并设置密码</string>
    <string name="account_no_account_error">手机号尚未注册，是否免密码快捷登录？</string>
    <string name="account_password_error">密码错误</string>
    <string name="account_password_login">账号密码登录</string>
    <string name="account_previous">上一步</string>
    <string name="account_quick_dialog_title_default">登录你的专属头条</string>
    <string name="account_quick_dialog_title_favor">登录后收藏永不丢失</string>
    <string name="account_quick_dialog_title_pgc_like">登录后关注永久保存</string>
    <string name="account_quick_dialog_title_post">登录后立即畅谈</string>
    <string name="account_quick_dialog_title_social">登录关注更多好友动态</string>
    <string name="account_quick_register">快捷注册</string>
    <string name="account_register_tips">"云端同步兴趣
精彩收藏永不丢失"</string>
    <string name="account_resend_auth_code">再次向手机%s发送验证码？</string>
    <string name="account_send_auth_code">发送验证码</string>
    <string name="account_set_password">设置密码</string>
    <string name="account_set_password_success">密码设置成功</string>
    <string name="account_skip">跳过</string>
    <string name="account_update_desc_success">签名修改成功</string>
    <string name="account_update_user_name_success">修改用户名成功</string>
    <string name="account_upload_avatar_fail">头像修改失败,请稍后再试</string>
    <string name="aiwue_host">www.aiwue.com</string>
    <string name="menu_recommend_article">推荐文章</string>
    <string name="menu_channel">频道设置</string>
    <string name="menu_info">我的信息</string>
    <string name="menu_feedback">意见反馈</string>
    <string name="menu_check_update">检查更新</string>
    <string name="menu_setting">设置</string>
    <string name="menu_about_us">关于我们</string>
    <string name="comment">评论</string>
    <string name="praise">赞</string>
    <string name="save">收藏</string>
    <string name="article">文章</string>
    <string name="recommend_articles_link_name">文章地址</string>
    <string name="recommend_articles_content_hint">1. 地址必须是以http://或者https://开头的链接\r\n2. 请将与链接无关的内容清理干净\r\n3. 请确保提供的链接是有效的，且可以公开访问的；\r\n3. 请确保推荐的文章是和武术、健康相关的；\r\n4. 恶意提供无效的链接可能导致账户被封</string>
    <string name="recommend_articles_reason_name">推荐理由</string>
    <string name="recommend_articles_reason_hint">说说您推荐的理由吧，让大家知道您为什么推荐。</string>
    <string name="recommend_articles_why">为什么要推荐文章？\r\n  1. 独乐乐不如众乐乐，读到好的文章，分享给别人才能体现自己的价值；\r\n 2. 众人拾柴火焰高，通过大家的推荐，让大家读到更多好文章\r\n 3.推荐的越多，您未来会获得越多的特权。\r\n4. 我怎么样推荐文章呢？查看下面的攻略 </string>
    <string name="recommend_articles_help">文章推荐攻略</string>
    <string name="menu_article_channel_edit">文章频道编辑</string>
</resources>