<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F7F7F7"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="#32353F"
        >
        <ImageView
            android:id="@+id/back_phonebind"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:padding="11dp"
            android:layout_centerVertical="true"
            android:src="@mipmap/leftbackicon_white_titlebar_normal"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/phone_bind"
            android:textColor="#FFFFFF"
            android:textSize="17sp"
            />
    </RelativeLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="12dp"
        android:text="@string/tip_bind"
        android:textSize="11sp"
        android:textColor="@color/category_hint_text_night"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:background="#FFFFFF"
        android:layout_marginTop="5dp"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_weight="4"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:text="@string/newphone_bind"
            android:textColor="@color/bg_update_write_comment_frame_night"
            android:layout_marginLeft="12dp"
            />

        <EditText
            android:id="@+id/newphonedInput"
            android:layout_width="0dp"
            android:layout_weight="13"
            android:layout_height="wrap_content"
            android:background="@null"
            android:layout_marginLeft="5dp"
            android:textSize="15sp"
            android:hint="@string/newphonehint_bind"
            android:textColorHint="@color/god_comment_divider"

            />
        <Button
            android:id="@+id/gainVCodeBtn"
            android:layout_width="0dp"
            android:layout_weight="4"
            android:layout_height="35dp"
            android:background="@drawable/shape_loginbtn"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:text="@string/getverify_bind"
            android:layout_marginRight="8dp"
            android:gravity="center"
            android:textColor="#FFFFFF"
            android:textSize="11sp"
            android:visibility="visible"
            />
    </LinearLayout>
    <include layout="@layout/include_underline"></include>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:background="#FFFFFF"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_weight="4"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:text="@string/vcode_bind"
            android:textColor="@color/bg_update_write_comment_frame_night"
            android:layout_marginLeft="12dp"
            />

        <EditText
            android:id="@+id/vcodeInput"
            android:layout_width="0dp"
            android:layout_weight="13"
            android:layout_height="wrap_content"
            android:background="@null"
            android:layout_marginLeft="5dp"
            android:textSize="15sp"
            android:hint="@string/vcodehint_bind"
            android:textColorHint="@color/god_comment_divider"
            />
        <ImageView
            android:layout_width="0dp"
            android:layout_weight="4"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            />
    </LinearLayout>


    <Button
            android:id="@+id/revise_btn"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:text="@string/modify_bind"
            android:textSize="16sp"
            android:textColor="#FFFFFF"
            android:gravity="center"
            android:background="@drawable/shape_savemodify_normal_btn"
            android:layout_alignParentRight="true"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:visibility="visible"
            />










</LinearLayout>