<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F7F7F7"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="#32353F"

        >
        <ImageView
            android:id="@+id/back_aboutus"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:padding="11dp"
            android:layout_centerVertical="true"
            android:src="@mipmap/leftbackicon_white_titlebar_normal"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/about_us"
            android:textColor="#FFFFFF"
            android:textSize="17sp"

            />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <ImageView
            android:id="@+id/logoicon"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/selector_aboutus"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="160dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/version_number_aboutus"
            android:textColor="#000000"
            android:layout_marginTop="8dp"
            android:textSize="11sp"
            android:layout_below="@id/logoicon"
        />

        <TextView
            android:id="@+id/tipnet_aboutas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="20dp"
            android:textSize="14sp"
            android:textColor="#AAAAAA"
            android:text="@string/tipnet_aboutus"/>

        <TextView
            android:id="@+id/tipservice_aboutas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:textAlignment="center"
            android:layout_above="@id/tipnet_aboutas"
            android:layout_marginBottom="30dp"
            android:text="@string/service_privacy_aboutus"
            android:textSize="15sp"
            android:textColor="#07B9C6"
            />

    </RelativeLayout>




</LinearLayout>